force-app/main/default/objects/SolTracking__c/SolTracking__c.object-meta.xml
<CustomObject>
    <label>Notifica SOL</label>
    <nameField>
        <displayFormat>LTK-{00000000}</displayFormat>
        <label>Notifica SOL Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notifiche SOL</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>