force-app/main/default/objects/SolTracking__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contatto SOL</description>
    <label>Contatto</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Notifiche SOL</relationshipLabel>
    <relationshipName>Notifiche_SOL</relationshipName>
    <type>Lookup</type>
</CustomField>