force-app/main/default/objects/SolTracking__c/fields/DeliveryChannel__c.field-meta.xml
<CustomField>
    <fullName>DeliveryChannel__c</fullName>
    <label>Canale Invio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SOL-APP</fullName>
                <default>true</default>
                <label>SOL-APP</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>