force-app/main/default/objects/SolTracking__c/fields/IdNotifySiebelRequest__c.field-meta.xml
<CustomField>
    <fullName>IdNotifySiebelRequest__c</fullName>
    <description>Id Richiesta notifica Siebel</description>
    <label>Id Richiesta notifica Siebel</label>
    <length>15</length>
    <type>Text</type>
</CustomField>