force-app/main/default/objects/SolTracking__c/fields/UserTag4__c.field-meta.xml
<CustomField>
    <fullName>UserTag4__c</fullName>
    <description>User Tag per variabili dinamiche notifiche SOL</description>
    <label>User Tag 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>